add login with Google

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -28,7 +28,20 @@
     .linkToRegistration {
       position: absolute;
       top: 50%;
-      right: 10px;
+      right: 100px;
+      transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+
+      a {
+        text-transform: uppercase;
+      }
+    }
+
+    .linkToLogin {
+      position: absolute;
+      top: 50%;
+      right: 20px;
       transform: translateY(-50%);
       -webkit-transform: translateY(-50%);
       -moz-transform: translateY(-50%);
