--- a/src/default.scss
+++ b/src/default.scss
@@ -45,7 +45,7 @@ a:hover {
 }
 
 .main {
-  height: calc(100% - 6.5rem);
+  height: calc(100% - 6.5rem - 5.8rem);
   width: 100%;
   max-width: 1450px;
   margin: 0 auto;
