--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -38,6 +38,15 @@
       }
     }
 
+    .userGreeting {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+    }
+
     .linkToLogin {
       position: absolute;
       top: 50%;
