--- a/src/components/SignIn/styles.scss
+++ b/src/components/SignIn/styles.scss
@@ -1,33 +1,23 @@
-.signin {
-  width: 100%;
-  max-width: 40rem;
-  margin: 0 auto;
-  padding: 10px;
-  border: 1px solid black;
+.socialSignIn {
+  .row {
+    position: relative;
 
-  .wrap {
-    padding: 10px;
-
-    h2 {
-      margin: 0 auto;
-      padding-bottom: 24px;
-      text-transform: uppercase;
-      text-align: center;
+    .icon {
+      position: absolute;
+      top: 50%;
+      left: 10%;
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      transform: translateY(-50%);
     }
   }
+}
 
-  .socialSignIn {
-    .row {
-      position: relative;
+.recoveryLink {
+  margin-top: 16px;
 
-      .icon {
-        position: absolute;
-        top: 50%;
-        left: 10%;
-        -webkit-transform: translateY(-50%);
-        -moz-transform: translateY(-50%);
-        transform: translateY(-50%);
-      }
-    }
+  a {
+    text-decoration: underline;
+    color: rgb(241, 91, 91);
   }
 }
